--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1174,6 +1174,139 @@ section {
     width: 100%;
 }
 /*--------------------------------------------------------------
+# About-impact
+--------------------------------------------------------------*/
+.about-impact h3 {
+    font-weight: 700;
+    font-size: 28px;
+    margin-bottom: 20px;
+    font-family: var(--font-secondary);
+  }
+
+  .about-impact .call-us {
+    left: 10%;
+    right: 10%;
+    bottom: 0;
+    background-color: #fff;
+    box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.08);
+    padding: 20px;
+    text-align: center;
+  }
+
+  .about-impact .call-us h4 {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 5px;
+  }
+
+  .about-impact .call-us p {
+    font-size: 28px;
+    font-weight: 700;
+    color: var(--color-primary);
+  }
+
+  .about-impact .content ul {
+    list-style: none;
+    padding: 0;
+  }
+
+  .about-impact .content ul li {
+    padding: 0 0 10px 30px;
+    position: relative;
+  }
+
+  .about-impact .content ul i {
+    position: absolute;
+    font-size: 20px;
+    left: 0;
+    top: -3px;
+    color: var(--color-primary);
+  }
+
+  .about-impact .content p:last-child {
+    margin-bottom: 0;
+  }
+
+  .about-impact .play-btn {
+    width: 94px;
+    height: 94px;
+    background: radial-gradient(var(--color-primary) 50%, rgba(0, 131, 116, 0.4) 52%);
+    border-radius: 50%;
+    display: block;
+    position: absolute;
+    left: calc(50% - 47px);
+    top: calc(50% - 47px);
+    overflow: hidden;
+  }
+
+  .about-impact .play-btn:before {
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    animation-delay: 0s;
+    animation: pulsate-btn 2s;
+    animation-direction: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: steps;
+    opacity: 1;
+    border-radius: 50%;
+    border: 5px solid rgba(0, 131, 116, 0.7);
+    top: -15%;
+    left: -15%;
+    background: rgba(198, 16, 0, 0);
+  }
+
+  .about-impact .play-btn:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 100;
+    transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  }
+
+  .about-impact .play-btn:hover:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border: none;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 200;
+    animation: none;
+    border-radius: 0;
+  }
+
+  .about-impact .play-btn:hover:after {
+    border-left: 15px solid var(--color-primary);
+    transform: scale(20);
+  }
+
+  @keyframes pulsate-btn {
+    0% {
+      transform: scale(0.6, 0.6);
+      opacity: 1;
+    }
+
+    100% {
+      transform: scale(1, 1);
+      opacity: 0;
+    }
+  }
+
+/*--------------------------------------------------------------
 # Clients
 --------------------------------------------------------------*/
 .clients {
@@ -2184,10 +2317,66 @@ section {
 --------------------------------------------------------------*/
 
 
-#museo .member-img img{
+#museo .member-img img, #museo .member-img video {
     width: 100%;
-    height: 40%;
+    height: 200px;
 }
+
+
+
+
+
+
+@media (max-width: 500px) {
+
+    #museo .member-img video {
+        width: 100%;
+        height: 188px;
+    }
+}
+@media only screen and (max-width: 768px) and (min-width: 500px) {
+    .member{
+        width: 100%;
+    }
+    #museo .member-img video {
+        width: 100%;
+        height: 290px;
+    }
+}
+
+@media only screen and (max-width: 991px) and (min-width: 768px) {
+    #museo .member-img video {
+        height: 188px;
+    }
+}
+@media only screen and (max-width: 1200px) and (min-width: 991px) {
+    #museo .member-img video {
+        height: 166px;
+    }
+}
+@media only screen and (max-width: 1400px) and (min-width: 1200px) {
+    #museo .member-img video {
+        height: 200px;
+    }
+
+}
+
+@media (min-width: 1400px) {
+    #museo .member-img video {
+        height: 234px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 
 .mapa{
     display: flex;
@@ -2846,13 +3035,36 @@ section #deportes-eventos{
 .telefonos-utiles{
     padding: 30px;
     margin-bottom: 60px;
-    background-color: #f5f5f5;
+
 }
-.telefono-icono i{
-    background-color: #ddd;
+.telefono-icono {
+
     border-radius: 50%;
     padding: 30px;
     font-size: 18px;
+}
+
+.bomberos{
+    background-color: #db3232;
+}
+
+.bomberos span{
+
+}
+
+.policia{
+    background-color: rgb(13, 116, 189);
+}
+.atencion{
+    /* background-color: #99CBD1; */
+    background-color: #53c04d;
+}
+
+
+.telefono-icono img{
+    height: 60px;
+
+
 }
 .telefonos-utiles .telefono{
     display: flex;
@@ -2918,6 +3130,11 @@ section #deportes-eventos{
   line-height: 1;
   font-weight: 700;
   text-transform: uppercase;
+}
+
+.footer-info img{
+    width: 200px;
+    margin-bottom: 16px;
 }
 
 #footer .footer-top .footer-info h3 span {
@@ -3417,6 +3634,12 @@ background-size: cover;
 
 #bibliotecas .portada-foto{
     background-image: url("../img/sections-portadas/cultura/biblio3.jpg");
+    height: 320px;
+    background-size: cover;
+}
+
+#museos .portada-foto{
+    background-image: url("../img/museos/porrt.jpg");
     height: 320px;
     background-size: cover;
 }
@@ -4032,136 +4255,27 @@ background-size: cover;
     }
 }
 
-/*--------------------------------------------------------------
-# PROJECT - LA CIUDAD
---------------------------------------------------------------*/
+@media (min-width: 991px) {
 
-#project-front .container{
-    position: relative;
-    margin-top: 40px;
-}
-
-#project-front img{
-    float: right;
-    width: 70%;
-}
-
-    /* 1200+ a 1400 */
-
-#project-front .front-title{
-    position: absolute;
-    background-color: #12b6d0a4;
-        top: 40;
-        left: 16;
-    padding:16px 10px;
-    color: #FFF;
-}
-
-#project-front .front-title h1{
-        font-size: 20px;
-    font-weight: 700;
-    text-transform: uppercase;
-    font-family: "Poppins", sans-serif;
-}
-
-.title-detail{
-    color: #25afc3;
-    /* text-shadow: 0px 0px 3px #127484a0; */
-}
-
-.text-detail{
-    color: #1a91a3;
-}
-
-@media (max-width: 500px) {
-    #project-front .front-title{
-        top: 20 !important;
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr); /* Crea 3 columnas de igual tamaño */
+        grid-template-rows: repeat(2); /* Crea 3 filas de altura fija de 100px */
+        /* gap: 10px; Espacio entre las celdas */
+        justify-content: center;
+        /* margin: 10px 280px; */
     }
 }
 
-@media (max-width: 768px) {
-    #project-front .front-title{
-        width: 60%;
-        top: 60;
+@media (max-width: 991px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr); /* Crea 3 columnas de igual tamaño */
+        grid-template-rows: repeat(4); /* Crea 3 filas de altura fija de 100px */
+        /* gap: 10px; Espacio entre las celdas */
+        justify-content: center;
+        /* margin: 10px 280px; */
     }
-
-    #project-front .front-title p{
-        font-size: 14px;
-    }
-
-    .title-detail{
-        color: #FFF;
-    }
-
-    .text-detail{
-        color: #FFF;
-    }
-}
-
-
-@media only screen and (max-width: 991px) and (min-width: 768px) {
-    #project-front .container{
-        margin-top: 60px;
-    }
-
-    #project-front .front-title{
-        top: 100;
-        left: -16;
-        padding: 50px 20px;
-    }
-
-    #project-front .front-title h1{
-        font-size: 28px;
-        font-weight: 700;
-    }
-}
-
-@media only screen and (max-width: 1200px) and (min-width: 991px) {
-    #project-front .front-title{
-        top: 160;
-        left: 10;
-        padding: 60px 20px;
-    }
-
-    #project-front .front-title h1{
-        font-size: 34px;
-        font-weight: 700;
-    }
-}
-
-@media only screen and (max-width: 1400px) and (min-width: 1200px) {
-    #project-front .front-title{
-        top: 160;
-        left: 26;
-        padding: 100px 40px;
-    }
-
-    #project-front .front-title h1{
-        font-size: 36px;
-        font-weight: 700;
-    }
-}
-
-@media (min-width: 1400px) {
-    #project-front .front-title{
-        top: 200;
-        left: 80;
-        padding: 100px 40px;
-    }
-
-    #project-front .front-title h1{
-        font-size: 36px;
-        font-weight: 700;
-    }
-}
-
-.grid-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Crea 3 columnas de igual tamaño */
-    grid-template-rows: repeat(2); /* Crea 3 filas de altura fija de 100px */
-    /* gap: 10px; Espacio entre las celdas */
-    justify-content: center;
-    /* margin: 10px 280px; */
 }
 
 .item {
@@ -4187,11 +4301,4 @@ background-size: cover;
 .grid-container .item-2,
 .grid-container .item-3 {
     background-color: #25afc3;
-}
-
-#project-info .project-container{
-    width: 100%;
-    margin: 0px;
-    background-color:#25afc3;
-    padding: 120px 180px;
 }
