--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1640,35 +1640,7 @@ section {
 
 } */
 
-#home-eventos .container .row .member .member-img img{
-    /* width:100% ;
-    height: 326px; */
-    object-fit: cover;
-}
 
-#home-eventos  .member .member-img>img{
-    object-fit: contain;
-}
-
-#cultura-eventos .container .row .member .member-img img{
-    width:100% ;
-    height: 420px;
-    object-fit: cover;
-}
-
-#cultura-eventos  .member .member-img>img{
-    object-fit: contain;
-}
-
-#deportes-eventos .container .row .member .member-img img{
-    width:100% ;
-     height: 420px;
-   object-fit: cover;
-}
-
-#deportes-eventos  .member .member-img>img{
-    object-fit: contain;
-}
 
 #eventos .container .row .member .member-img img{
     width:100% ;
@@ -1690,9 +1662,6 @@ section {
     object-fit: contain;
 }
 
-#home-eventos .evento-img img{
-    height: 326px;
-}
 
 .evento-img img{
     border-radius: 10px;
@@ -1731,6 +1700,12 @@ section {
     color: #ffffff;
 }
 
+#cultura-eventos .evento-img img,
+#deportes-eventos .evento-img img{
+    width:100% ;
+    height: 344px;
+}
+
 .btn-modal-evento{
     position: absolute;
     opacity: 0;
@@ -1759,8 +1734,6 @@ section {
     .evento-img {
         position: relative;
         width: 100% ;
-        /* border-radius: 10px;
-        box-shadow: 0 0 9px rgba(0, 0, 0, .1); */
         margin: 0px  20px;
         left: 0px;
     }
@@ -1768,7 +1741,63 @@ section {
 }
 
 
+
+@media (min-width: 1400px) {
+    #home-eventos .evento-img img,
+    #cultura-eventos .evento-img img,
+    #deportes-eventos .evento-img img{
+        height: 404px;
+        width:100% ;
+    }
+}
+
+@media only screen and (max-width: 1400px) and (min-width: 1200px) {
+    #home-eventos .evento-img img,
+    #cultura-eventos .evento-img img,
+    #deportes-eventos .evento-img img{
+        height: 344px;
+        /* width:100% ; */
+    }
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 760px) {
+    #home-eventos .evento-img img,
+    #cultura-eventos .evento-img img,
+    #deportes-eventos .evento-img img{
+        height: 324px;
+    }
+}
+
+@media only screen and (max-width: 1200px) and (min-width: 760px) {
+    #home-eventos .evento-img img,
+    #cultura-eventos .evento-img img,
+    #deportes-eventos .evento-img img{
+        height: 504px;
+        /* width:100% ; */
+    }
+}
+
+
+
+@media only screen and (max-width: 760px) and (min-width: 600px) {
+    #home-eventos .evento-img img,
+    #cultura-eventos .evento-img img,
+    #deportes-eventos .evento-img img{
+        height: 504px;
+    }
+}
+
+@media only screen and (max-width: 700px) and (min-width: 500px) {
+    #home-eventos .evento-img img,
+    #cultura-eventos .evento-img img,
+    #deportes-eventos .evento-img img{
+        height: 400px;
+    }
+}
+
+
 @media only screen and (max-width: 620px) and (min-width: 500px) {
+
     .evento-img {
         position: relative;
         width: 90% ;
@@ -1779,13 +1808,14 @@ section {
         /* height: 420px; */
     }
 
-    #home-eventos .evento-img img{
+    /* #home-eventos .evento-img img{
         height: 420px;
-    }
+    } */
 }
 
 @media (max-width: 500px) {
-
+    #cultura-eventos .evento-img img,
+    #deportes-eventos .evento-img img,
     .evento-img img{
         width: 80%;
         border-radius: 10px;
@@ -4186,7 +4216,7 @@ background-size: cover;
     box-shadow: 5px 5px 8px 5px rgba(132, 132, 132, 0.693);
 }
 
-.swiper-slide {
+.swiper-noticia .swiper-slide {
     text-align: center;
     font-size: 18px;
     background: #fff;
@@ -4196,7 +4226,7 @@ background-size: cover;
     border-radius: 5px;
 }
 
-.swiper-slide img {
+.swiper-noticia .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
@@ -4291,6 +4321,12 @@ background-size: cover;
     display: none;
   }
 
+  @media (min-width: 1400px)  {
+    .container-image-2, .container-image-1{
+        height: 580px;
+    }
+}
+
 @media only screen and (max-width: 1200px) and (min-width: 991px) {
     .swiper-noticia {
         margin: 0px 20px;
@@ -4301,6 +4337,12 @@ background-size: cover;
     .container-image-2, .container-image-1{
         display: flex;
         justify-content: center;
+    }
+}
+
+@media (max-width: 500px)  {
+    .container-image-2, .container-image-1{
+        height: 380px;
     }
 }
 
@@ -4330,20 +4372,24 @@ background-size: cover;
 
 .today-one{
     position: absolute;
-    top: 180;
+    top: 140;
     width: 60%;
-    padding: 0px 10px;
+    padding: 0px 0px;
 }
 
 .today-two{
     position: absolute;
     width: 60%;
-    top: 290;
-    padding: 0px 10px;
+    top: 250;
+    padding: 0px 0px;
 }
 @media (max-width: 500px) {
     .container-image-2{
         margin-bottom: 60px;
+    }
+
+    .today img{
+        height: 380px;
     }
 
 }
@@ -4355,6 +4401,7 @@ background-size: cover;
     .today{
         font-size: 13px;
         width: 100%;
+
     }
 
     .today img{
@@ -4376,21 +4423,25 @@ background-size: cover;
 @media only screen and (max-width: 991px) and (min-width: 768px) {
     .today{
         font-size: 13px;
+        height: 480px;
     }
 
 
     .today-one{
         width: 65%;
+        top: 180;
     }
 
     .today-two{
         width: 65%;
+        top: 290;
     }
 }
 @media only screen and (max-width: 1200px) and (min-width: 991px) {
     .today{
         margin: 0px 20px;
         font-size: 13px;
+        height: 480px;
     }
 
     .today-one{
@@ -4409,14 +4460,20 @@ background-size: cover;
         font-size: 14px;
     }
 
+    .today img{
+        height: 480px;
+    }
+
     .today-one{
         top: 180;
         width: 60%;
+        padding: 0px 10px;
     }
 
     .today-two{
         top: 290;
         width: 60%;
+        padding: 0px 10px;
     }
 }
 
@@ -4424,15 +4481,20 @@ background-size: cover;
 
     .today{
         font-size: 14px;
+        height: 580px;
+    }
+
+    .today img{
+        height: 580px;
     }
 
     .today-one{
-        top: 180;
+        top: 210;
         width: 50%;
     }
 
     .today-two{
-        top: 290;
+        top: 330;
         width: 50%;
     }
 }
